loading lib directory using application's own classloader and changing jruby_initial_runtimes to jruby_min_runtimes, to follow warbler and jruby-rack conventions

--- a/spec/config.yml
+++ b/spec/config.yml
@@ -6,7 +6,7 @@
   :environment: development
   :port: 3000
   :lib_dir: lib/**/*.jar
-  :jruby_initial_runtimes: 2
+  :jruby_min_runtimes: 2
 - :context_path: /testB
   :base: /testing
   :adapter: :merb
@@ -21,7 +21,7 @@
     :base: /something
     :adapter: :rails
 :environment: production
-:jruby_initial_runtimes: 1
+:jruby_min_runtimes: 1
 :jruby_max_runtimes: 2
 :thread_pool_max: 40
 :thread_pool_min: 1
