--- a/spec/jetty_rails_sample_1.yml
+++ b/spec/jetty_rails_sample_1.yml
@@ -6,7 +6,7 @@
   :environment: development
   :port: 3000
 :environment: production
-:jruby_initial_runtimes: 1
+:jruby_min_runtimes: 1
 :jruby_max_runtimes: 2
 :thread_pool_max: 40
 :thread_pool_min: 1
